--- a/src/components/input/styles.scss
+++ b/src/components/input/styles.scss
@@ -14,6 +14,7 @@ $border-radius: 4px;
 .container {
   display: flex;
   position: relative;
+  flex-direction: column;
 }
 .input {
   border: 1px solid #ccc;
@@ -37,9 +38,9 @@ $border-radius: 4px;
 }
 .icon {
   top: 55%;
-  right: 10px;
+  right: -20px;
   cursor: pointer;
   position: absolute;
   transform: translateY(-50%);
-  background: transparent;
+  background: $white;
 }
