--- a/src/components/button/styles.scss
+++ b/src/components/button/styles.scss
@@ -17,6 +17,7 @@ $border-radius: 4px;
   font-weight: 500;
   text-align: center;
   border: none;
+  min-width: 180px;
   outline: none;
   padding: 12px 16px;
   transition: background-color 0.2s ease;
@@ -83,5 +84,14 @@ $border-radius: 4px;
       transition-duration: 0.1s;
       background-color: rgba($gray100, 0.6);
     }
+  }
+  &.small {
+    width: 180px;
+  }
+  &.middle {
+    width: 50%;
+  }
+  &.large {
+    width: 100%;
   }
 }
