--- a/src/components/input/styles.scss
+++ b/src/components/input/styles.scss
@@ -33,6 +33,10 @@ $border-radius: 4px;
   transition: border-color 0.2s ease;
   padding: 12px 16px;
   border-radius: $border-radius;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-right: 35px;
   &::placeholder {
     color: $gray200;
   }
@@ -44,6 +48,9 @@ $border-radius: 4px;
     border-inline-end-width: 1px;
     outline: 0;
   }
+  &:disabled {
+    padding-right: 8px;
+  }
 }
 .icon {
   top: 55%;
@@ -51,5 +58,5 @@ $border-radius: 4px;
   cursor: pointer;
   position: absolute;
   transform: translateY(-50%);
-  background: $white;
+  background: transparent;
 }
