--- a/src/components/galery-02/styles.scss
+++ b/src/components/galery-02/styles.scss
@@ -2,14 +2,14 @@
   --background: #3c343d;
 }
 
-.gallery {
+.gallery-two {
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
   max-width: 800px;
 }
 
-.card {
+.card-two {
   position: relative;
   left: 0px;
   width: 80px;
@@ -22,11 +22,11 @@
   flex: 0.25;
 }
 
-.card img {
+.card-two img {
   height: 100%;
 }
 
-.card:hover {
+.card-two:hover {
   flex: 2;
   font-weight: bold;
   cursor: pointer;
