--- a/src/components/button/styles.scss
+++ b/src/components/button/styles.scss
@@ -11,7 +11,7 @@ $shadow: rgba(0, 0, 0, 0.2);
 $border-width: 1px;
 $border-radius: 4px;
 
-.button {
+.buttonds {
   cursor: pointer;
   font-size: 16px;
   font-weight: 500;
