--- a/src/components/input/styles.scss
+++ b/src/components/input/styles.scss
@@ -11,7 +11,7 @@ $shadow: rgba(0, 0, 0, 0.2);
 $border-width: 1px;
 $border-radius: 4px;
 
-.container {
+.containerds {
   display: flex;
   position: relative;
   min-width: 20rem;
@@ -25,7 +25,7 @@ $border-radius: 4px;
     width: 100%;
   }
 }
-.input {
+.inputds {
   border: 1px solid #ccc;
   width: 100%;
   font-size: 16px;
@@ -52,7 +52,7 @@ $border-radius: 4px;
     padding-right: 8px;
   }
 }
-.icon {
+.iconds {
   top: 55%;
   right: 15px;
   cursor: pointer;
