--- a/src/components/button/styles.scss
+++ b/src/components/button/styles.scss
@@ -1,15 +1,26 @@
-$white: #fff;
-$black: #000;
-$blue: #007bff;
-$yellow: #ffff00;
-$gray200: #808080;
-$gray100: #d3d3d3;
-$violet300: #4b0082;
-$primary: #8a2be2;
-$violet100: #b980f0;
-$shadow: rgba(0, 0, 0, 0.2);
-$border-width: 1px;
-$border-radius: 4px;
+@import '@/styles/_variables';
+
+@mixin button-focus-style($color) {
+  box-shadow: 0 0 0 2px lighten($color, 20);
+  border-inline-end-width: 1px;
+  outline: 0;
+}
+
+@mixin button-active-style($color) {
+  color: $color;
+  border: $border-width solid $color;
+}
+
+@mixin button-disabled-style($color, $bgColor) {
+  color: $color;
+  background-color: $bgColor;
+  cursor: not-allowed;
+}
+
+@mixin button-hover-style($bgColor) {
+  transition-duration: 0.1s;
+  background-color: rgba($bgColor, 0.6);
+}
 
 .buttonds {
   cursor: pointer;
@@ -22,69 +33,54 @@ $border-radius: 4px;
   padding: 12px 16px;
   transition: background-color 0.2s ease;
   border-radius: $border-radius;
+
   &.primary {
-    background-color: $primary;
+    background-color: $indigo;
     color: $white;
     &:hover {
-      background-color: darken($primary, 10%);
+      background-color: darken($indigo, 10%);
     }
     &:active {
-      transform: translateY(1px);
-      box-shadow: 0 1px 1px $shadow;
+      background-color: $indigo-900;
     }
     &:focus {
-      box-shadow: 0 0 0 2px lighten($blue, 20);
-      border-inline-end-width: 1px;
-      outline: 0;
+      @include button-focus-style($indigo);
     }
     &:disabled {
-      color: $gray100;
-      background-color: $gray200;
-      cursor: not-allowed;
-      &:active {
-        transform: translateY(0px);
-        box-shadow: 0 0px 0px;
-      }
+      @include button-disabled-style($gray-100, $gray-500);
     }
   }
+
   &.outline {
     background-color: transparent;
-    color: $primary;
-    border: $border-width solid $primary;
+    color: $indigo;
+    border: $border-width solid $indigo;
     &:hover {
-      background-color: rgba($primary, 0.1);
+      background-color: rgba($indigo, 0.1);
     }
     &:active {
-      transform: translateY(1px);
-      box-shadow: 0 1px 1px $shadow;
+      @include button-active-style($indigo-900);
     }
     &:focus {
-      box-shadow: 0 0 0 2px lighten($blue, 20);
-      border-inline-end-width: 1px;
-      outline: 0;
+      @include button-focus-style($indigo);
     }
     &:disabled {
-      background-color: transparent;
-      color: $gray200;
-      border: $border-width solid $gray200;
-      cursor: not-allowed;
-      &:active {
-        transform: translateY(0px);
-        box-shadow: 0 0px 0px;
-      }
+      @include button-disabled-style($gray-500, $white);
+      border: $border-width solid $gray-500;
     }
   }
+
   &.text {
     background-color: transparent;
-    color: $gray200;
+    color: $gray-600;
     &:active {
-      transform: translateY(1px);
+      color: $gray-600;
     }
     &:hover {
-      transition-duration: 0.1s;
-      background-color: rgba($gray100, 0.6);
+      @include button-hover-style($gray-500);
     }
   }
+
   &.small {
     width: 180px;
   }
