feat: add select

--- a/src/components/ds-scss/button/_styles.scss
+++ b/src/components/ds-scss/button/_styles.scss
@@ -22,7 +22,7 @@
   background-color: rgba($bgColor, 0.6);
 }
 
-.buttonds {
+.button {
   cursor: pointer;
   font-size: 16px;
   font-weight: 500;
