--- a/src/components/ds-scss/input/_styles.scss
+++ b/src/components/ds-scss/input/_styles.scss
@@ -1,17 +1,6 @@
-$white: #fff;
-$black: #000;
-$blue: #007bff;
-$yellow: #ffff00;
-$gray200: #808080;
-$gray100: #d3d3d3;
-$violet300: #4b0082;
-$primary: #8a2be2;
-$violet100: #b980f0;
-$shadow: rgba(0, 0, 0, 0.2);
-$border-width: 1px;
-$border-radius: 4px;
+@import '@/styles/_variables';
 
-.containerds {
+.container {
   display: flex;
   position: relative;
   min-width: 20rem;
@@ -25,8 +14,8 @@ $border-radius: 4px;
     width: 100%;
   }
 }
-.inputds {
-  border: 1px solid #ccc;
+.input {
+  border: 1px solid $gray-500;
   width: 100%;
   font-size: 16px;
   outline: none;
@@ -38,13 +27,13 @@ $border-radius: 4px;
   text-overflow: ellipsis;
   padding-right: 35px;
   &::placeholder {
-    color: $gray200;
+    color: $gray-500;
   }
   &:focus {
-    border-color: $primary;
+    border-color: $indigo;
   }
   &:focus {
-    box-shadow: 0 0 0 2px lighten($blue, 20);
+    box-shadow: 0 0 0 2px lighten($indigo, 20);
     border-inline-end-width: 1px;
     outline: 0;
   }
@@ -52,7 +41,7 @@ $border-radius: 4px;
     padding-right: 8px;
   }
 }
-.iconds {
+.icon {
   top: 55%;
   right: 15px;
   cursor: pointer;
