--- a/src/components/ds-scss/select/select.module.scss
+++ b/src/components/ds-scss/select/select.module.scss
@@ -1,53 +1,35 @@
-// Estilos base para o select
-$select-height: 40px;
-$select-border: 1px solid #ccc;
-$select-background: #fff;
-$select-color: #333;
-$select-padding: 10px;
-$select-radius: 4px;
+@import '@/styles/_variables';
 
-// Estilos para o dropdown
-$dropdown-background: #fff;
-$dropdown-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-
-// Estilos para as opções do dropdown
-$option-background: #fff;
-$option-hover-background: #f2f2f2;
-$option-color: #333;
-$option-hover-color: #222;
-// components/CustomSelect.module.scss
-
-.customSelect {
+.container {
   position: relative;
-  display: inline-block;
+  display: flex;
+  min-width: 20rem;
 
   .selectField {
+    border: 1px solid $gray-500;
     width: 100%;
-    border: $select-border;
-    background: $select-background;
-    color: $select-color;
-    padding: $select-padding;
-    border-radius: $select-radius;
+    font-size: 16px;
+    outline: none;
+    transition: border-color 0.2s ease;
+    padding: 12px 16px;
+    border-radius: $border-radius;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     cursor: pointer;
-
-    &:focus {
-      outline: none;
-      box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.4); // Exemplo de destaque em foco
-    }
   }
 
   .selectDropdown {
     position: absolute;
-    top: calc(#{$select-height} + 5px);
+    top: calc(40px + 6px);
     left: 0;
     width: 100%;
     max-height: 150px;
     overflow-y: auto;
-    background: $dropdown-background;
-    box-shadow: $dropdown-shadow;
-    border: $select-border;
-    border-top: none;
-    border-radius: 0 0 $select-radius $select-radius;
+    background: $white;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    border: 1px solid $gray-500;
+    border-radius: $border-radius;
     z-index: 2;
 
     &::-webkit-scrollbar {
@@ -55,22 +37,23 @@ $option-hover-color: #222;
     }
 
     &::-webkit-scrollbar-thumb {
-      background: darken($dropdown-background, 20%);
+      background: darken($white, 20%);
+      border-radius: $border-radius;
     }
 
     &::-webkit-scrollbar-track {
-      background: $dropdown-background;
+      background: $white;
     }
 
     .selectOption {
-      padding: $select-padding;
-      color: $option-color;
-      background: $option-background;
+      padding: 10px;
+      color: #333;
+      background: #fff;
       cursor: pointer;
 
       &:hover {
-        background: $option-hover-background;
-        color: $option-hover-color;
+        background: #f2f2f2;
+        color: #222;
       }
     }
   }
