--- a/src/components/ds-scss/select/select.module.scss
+++ b/src/components/ds-scss/select/select.module.scss
@@ -37,11 +37,11 @@
     max-height: 150px;
     overflow-y: auto;
     background: $white;
+    scroll-behavior: smooth;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     border: 1px solid $gray-500;
     border-radius: $border-radius;
     z-index: 2;
-
     &::-webkit-scrollbar {
       width: 5px;
     }
@@ -53,14 +53,12 @@
       background: $white;
       border-radius: $border-radius;
     }
-
     .selectOption {
       margin: 0.2rem;
       padding: 0.5rem 0.5rem;
       color: #636574;
       border-radius: 0.3rem;
       cursor: pointer;
-
       &:hover,
       :focus {
         background-color: #f7f7f8;
