--- a/src/components/ds-core/dropdown-select-sc/styles.scss
+++ b/src/components/ds-core/dropdown-select-sc/styles.scss
@@ -38,9 +38,8 @@
   display: none;
 }
 
-#options-view-button:focus + #select-button
-// #options-view-button:checked + #selected-button
-{
+#options-view-button:focus + #select-button,
+#options-view-button:checked + #selected-button {
   outline: 1px solid #a881e6;
 }
 
@@ -86,29 +85,29 @@
   display: none;
 }
 
-.option {
-  position: relative;
-  display: flex;
-  align-items: center;
-  padding: 0.75rem;
-  gap: 0.5rem;
-  /* width: 100%; */
-  border-bottom: 1px solid #252529;
-}
+// .option {
+//   position: relative;
+//   display: flex;
+//   align-items: center;
+//   padding: 0.75rem;
+//   gap: 0.5rem;
+//   /* width: 100%; */
+//   border-bottom: 1px solid #252529;
+// }
 
-.option .label {
-  color: #fbf9fe;
-}
+// .option .label {
+//   color: #fbf9fe;
+// }
 
-.option svg {
-  width: 1rem;
-  height: 1rem;
-}
+// .option svg {
+//   width: 1rem;
+//   height: 1rem;
+// }
 
-.option svg:last-child {
-  margin-left: auto;
-  color: #a881e6;
-}
+// .option svg:last-child {
+//   margin-left: auto;
+//   color: #a881e6;
+// }
 
 .option:has(input:checked),
 .option:hover {
